--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1, 0, 0,  ..., 1, 1, 1], dtype=torch.uint8)"
+       "tensor([1, 0, 0,  ..., 1, 0, 0], dtype=torch.uint8)"
       ]
      },
      "execution_count": 1,
@@ -61,40 +61,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try project here!"
+    "def get_parallel_db(db, remove_index):\n",
+    "    return torch.cat((db[0:remove_index],\n",
+    "                     db[remove_index+1:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_parallel_dbs(db):\n",
+    "    parallel_dbs = list()\n",
+    "    \n",
+    "    for i in range(len(db)):\n",
+    "        parallel_db = get_parallel_db(db, 1)\n",
+    "        parallel_dbs.append(parallel_db)\n",
+    "        \n",
+    "    return parallel_dbs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_db_and_parallels(num_entries):\n",
+    "    db = torch.rand(num_entries) > 0.5\n",
+    "    pdbs = get_parallel_dbs(db)\n",
+    "    \n",
+    "    return db, pdbs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db, pdbs = create_db_and_parallels(10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdbs"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,20 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensitivity"
    ]
@@ -184,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,20 +599,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(40.)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db, pdbs = create_db_and_parallels(100)\n",
     "\n",
@@ -764,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,20 +870,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "labels = np.array([9, 9, 3, 6, 9, 9, 9, 9, 8, 2])\n",
     "counts = np.bincount(labels, minlength=10)\n",
@@ -854,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,17 +891,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: May not have used enough values of l. Increase 'moments' variable and run again.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_teachers, num_examples, num_labels = (100, 100, 10)\n",
     "preds = (np.random.rand(num_teachers, num_examples) * num_labels).astype(int) #fake preds\n",
@@ -889,19 +909,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: May not have used enough values of l. Increase 'moments' variable and run again.\n",
-      "Data Independent Epsilon: 11.756462732485115\n",
-      "Data Dependent Epsilon: 1.52655213289881\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dep_eps, data_ind_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1, delta=1e-5)\n",
     "print(\"Data Independent Epsilon:\", data_ind_eps)\n",
@@ -910,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,18 +929,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Independent Epsilon: 11.756462732485115\n",
-      "Data Dependent Epsilon: 0.9029013677789843\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dep_eps, data_ind_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1, delta=1e-5, moments=20)\n",
     "print(\"Data Independent Epsilon:\", data_ind_eps)\n",
@@ -992,129 +993,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 99%|█████████▉| 9814016/9912422 [00:13<00:00, 1981975.99it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0it [00:00, ?it/s]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/28881 [00:00<?, ?it/s]\u001b[A\n",
-      " 57%|█████▋    | 16384/28881 [00:00<00:00, 157526.04it/s]\u001b[A\n",
-      "32768it [00:00, 89641.49it/s]                            \u001b[A\n",
-      "0it [00:00, ?it/s]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/1648877 [00:00<?, ?it/s]\u001b[A\n",
-      "  1%|          | 16384/1648877 [00:00<00:12, 130361.62it/s]\u001b[A\n",
-      "  2%|▏         | 40960/1648877 [00:00<00:10, 150807.99it/s]\u001b[A\n",
-      "  6%|▌         | 98304/1648877 [00:00<00:08, 192095.89it/s]\u001b[A\n",
-      "  9%|▉         | 155648/1648877 [00:00<00:06, 238429.00it/s]\u001b[A\n",
-      " 13%|█▎        | 212992/1648877 [00:00<00:05, 286706.68it/s]\u001b[A\n",
-      " 16%|█▋        | 270336/1648877 [00:00<00:04, 334215.55it/s]\u001b[A\n",
-      " 20%|██        | 335872/1648877 [00:01<00:03, 381238.88it/s]\u001b[A\n",
-      " 24%|██▍       | 401408/1648877 [00:01<00:02, 427862.04it/s]\u001b[A\n",
-      " 29%|██▉       | 475136/1648877 [00:01<00:02, 473317.53it/s]\u001b[A\n",
-      " 33%|███▎      | 548864/1648877 [00:01<00:02, 514677.63it/s]\u001b[A\n",
-      " 38%|███▊      | 622592/1648877 [00:01<00:01, 542331.15it/s]\u001b[A\n",
-      " 43%|████▎     | 704512/1648877 [00:01<00:01, 574474.97it/s]\u001b[A\n",
-      " 48%|████▊     | 786432/1648877 [00:01<00:01, 612895.02it/s]\u001b[A\n",
-      " 53%|█████▎    | 868352/1648877 [00:01<00:01, 656129.61it/s]\u001b[A\n",
-      " 59%|█████▊    | 966656/1648877 [00:01<00:00, 706437.60it/s]\u001b[A\n",
-      " 64%|██████▍   | 1056768/1648877 [00:02<00:00, 752979.15it/s]\u001b[A\n",
-      " 69%|██████▉   | 1138688/1648877 [00:02<00:00, 657984.36it/s]\u001b[A\n",
-      " 75%|███████▌  | 1236992/1648877 [00:02<00:00, 725740.95it/s]\u001b[A\n",
-      " 81%|████████  | 1335296/1648877 [00:02<00:00, 785571.95it/s]\u001b[A\n",
-      " 87%|████████▋ | 1441792/1648877 [00:02<00:00, 831515.47it/s]\u001b[A\n",
-      " 94%|█████████▍| 1556480/1648877 [00:02<00:00, 887707.79it/s]\u001b[A\n",
-      "1654784it [00:02, 619527.52it/s]                             \u001b[A\n",
-      "0it [00:00, ?it/s]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/4542 [00:00<?, ?it/s]\u001b[A\n",
-      "8192it [00:00, 33143.73it/s]            \u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torchvision.datasets as datasets\n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)"
@@ -1122,20 +1003,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/atrask/anaconda/lib/python3.6/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data\n",
-      "  warnings.warn(\"train_data has been renamed data\")\n",
-      "/Users/atrask/anaconda/lib/python3.6/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets\n",
-      "  warnings.warn(\"train_labels has been renamed targets\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = mnist_trainset.train_data\n",
     "train_targets = mnist_trainset.train_labels"
@@ -1143,20 +1013,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/atrask/anaconda/lib/python3.6/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data\n",
-      "  warnings.warn(\"test_data has been renamed data\")\n",
-      "/Users/atrask/anaconda/lib/python3.6/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets\n",
-      "  warnings.warn(\"test_labels has been renamed targets\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = mnist_trainset.test_data\n",
     "test_targets = mnist_trainset.test_labels"
@@ -1186,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
