--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1, 0, 0,  ..., 1, 0, 0], dtype=torch.uint8)"
+       "tensor([1, 1, 0,  ..., 0, 0, 1], dtype=torch.uint8)"
       ]
      },
      "execution_count": 1,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8)"
+       "tensor([1, 0, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8)"
       ]
      },
      "execution_count": 6,
@@ -136,16 +136,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8),\n",
-       " tensor([0, 0, 1, 1, 0, 0, 1, 1, 1], dtype=torch.uint8)]"
+       "[tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8)]"
       ]
      },
      "execution_count": 7,
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sensitivity"
    ]
@@ -234,61 +245,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "def sensitivity(query, n_entries):\n",
+    "    \n",
+    "    db, pdbs = create_db_and_parallels(n_entries)\n",
+    "\n",
+    "    full_db_result = query(db)\n",
+    "    \n",
+    "    max_distance = 0\n",
+    "    for pdb in pdbs:\n",
+    "        pdb_result = query(pdb)\n",
+    "\n",
+    "        db_distance = torch.abs(pdb_result - full_db_result)\n",
+    "\n",
+    "        if(db_distance > max_distance):\n",
+    "            max_distance = db_distance\n",
+    "    \n",
+    "    return max_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def query(db):\n",
+    "    return db.float().mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0005)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitivity(query, 1000)"
+   ]
   },
   {
    "cell_type": "markdown",
