--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1, 1, 0,  ..., 0, 0, 1], dtype=torch.uint8)"
+       "tensor([0, 1, 0,  ..., 0, 1, 0], dtype=torch.uint8)"
       ]
      },
      "execution_count": 1,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1, 0, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8)"
+       "tensor([0, 1, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8)"
       ]
      },
      "execution_count": 6,
@@ -136,16 +136,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([1, 0, 1, 0, 0, 1, 1, 0, 1], dtype=torch.uint8)]"
+       "[tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8)]"
       ]
      },
      "execution_count": 7,
@@ -319,33 +319,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "def query(db, threshold=5):\n",
+    "    return (db.sum() > threshold).float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "tensor(1.)\n",
+      "tensor(1.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):    \n",
+    "    sens_f = sensitivity(query, n_entries=10)\n",
+    "    print(sens_f)"
+   ]
   },
   {
    "cell_type": "markdown",
