Perform a differencing attack on row 10

--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 1, 0,  ..., 0, 1, 0], dtype=torch.uint8)"
+       "tensor([1, 0, 0,  ..., 0, 0, 0], dtype=torch.uint8)"
       ]
      },
      "execution_count": 1,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 1, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8)"
+       "tensor([0, 1, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8)"
       ]
      },
      "execution_count": 6,
@@ -136,16 +136,16 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8),\n",
-       " tensor([0, 1, 1, 0, 0, 0, 1, 0, 1], dtype=torch.uint8)]"
+       "[tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8),\n",
+       " tensor([0, 0, 1, 1, 0, 1, 1, 0, 1], dtype=torch.uint8)]"
       ]
      },
      "execution_count": 7,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1)"
+       "0"
       ]
      },
      "execution_count": 12,
@@ -344,8 +344,8 @@
       "0\n",
       "0\n",
       "0\n",
-      "tensor(1.)\n",
-      "tensor(1.)\n"
+      "0\n",
+      "0\n"
      ]
     }
    ],
@@ -372,61 +372,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "db, _ = create_db_and_parallels(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdb = get_parallel_db(db, 10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1, dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Differencing Attack using sum\n",
+    "sum(db) - sum(pdb)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0049)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Differencing Attack using mean\n",
+    "(sum(db).float() / len(db)) - (sum(pdb).float() / len(pdb))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0, dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Differencing Attack using threshold\n",
+    "(sum(db).float() > 49) - (sum(pdb).float() > 49)"
+   ]
   },
   {
    "cell_type": "markdown",
